{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 192,
  "lineage": "ca188b26-d482-c75a-1e95-32818c99e142",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ttest_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01306bb15aeee05df",
            "domain": "vpc",
            "id": "eipalloc-01306bb15aeee05df",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-109-68.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.109.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ttest_EIP_for_NAT"
            },
            "tags_all": {
              "Name": "ttest_EIP_for_NAT"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ttest_gw",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ttest_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:internet-gateway/igw-07f80fd972e4ef5cd",
            "id": "igw-07f80fd972e4ef5cd",
            "owner_id": "192648581687",
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "dependencies": [
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ttest_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:loadbalancer/app/ttest-lb-asg/95f3323e5d2ef67e",
            "arn_suffix": "app/ttest-lb-asg/95f3323e5d2ef67e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ttest-lb-asg-480256044.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:loadbalancer/app/ttest-lb-asg/95f3323e5d2ef67e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ttest-lb-asg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fdd459a7205926d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02183bf7840a0e699"
              },
              {
                "subnet_id": "subnet-0930bac2fb285b910"
              }
            ],
            "subnets": [
              "subnet-02183bf7840a0e699",
              "subnet-0930bac2fb285b910"
            ],
            "vpc_id": "vpc-0373183ceb1b47e7b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_internet_gateway.ttest_gw",
            "aws_security_group.ttest_sg_for_elb",
            "aws_subnet.ttest_pubsubnet_1a",
            "aws_subnet.ttest_pubsubnet_1b",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ttest_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:listener/app/ttest-lb-asg/95f3323e5d2ef67e/5ca39228bd1ebd74",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:targetgroup/ttest-tf-lb-alb-tg/6af68db33ca0726d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:listener/app/ttest-lb-asg/95f3323e5d2ef67e/5ca39228bd1ebd74",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:loadbalancer/app/ttest-lb-asg/95f3323e5d2ef67e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ttest_gw",
            "aws_lb.ttest_lb",
            "aws_lb_target_group.ttest_alb_tg",
            "aws_security_group.ttest_sg_for_elb",
            "aws_subnet.ttest_pubsubnet_1a",
            "aws_subnet.ttest_pubsubnet_1b",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ttest_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:targetgroup/ttest-tf-lb-alb-tg/6af68db33ca0726d",
            "arn_suffix": "targetgroup/ttest-tf-lb-alb-tg/6af68db33ca0726d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192648581687:targetgroup/ttest-tf-lb-alb-tg/6af68db33ca0726d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ttest-tf-lb-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "dependencies": [
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ttest_nat_for_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01306bb15aeee05df",
            "association_id": "eipassoc-065a2d7a724cded49",
            "connectivity_type": "public",
            "id": "nat-0fd74ecdf4f8f7dce",
            "network_interface_id": "eni-005726c55011fde2a",
            "private_ip": "10.0.0.17",
            "public_ip": "43.200.109.68",
            "subnet_id": "subnet-0930bac2fb285b910",
            "tags": {
              "Name": "ttest NAT for private subnet"
            },
            "tags_all": {
              "Name": "ttest NAT for private subnet"
            }
          },
          "dependencies": [
            "aws_eip.ttest_eip",
            "aws_internet_gateway.ttest_gw",
            "aws_subnet.ttest_pubsubnet_1a",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ttest_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:route-table/rtb-0c3dcc02ae5a8f41e",
            "id": "rtb-0c3dcc02ae5a8f41e",
            "owner_id": "192648581687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd74ecdf4f8f7dce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ttest_eip",
            "aws_internet_gateway.ttest_gw",
            "aws_nat_gateway.ttest_nat_for_private_subnet",
            "aws_subnet.ttest_pubsubnet_1a",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ttest_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:route-table/rtb-0a1fd999a1c7a8d68",
            "id": "rtb-0a1fd999a1c7a8d68",
            "owner_id": "192648581687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f80fd972e4ef5cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ttest_gw",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ttest_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4d59ea91668a768",
            "route_table_id": "rtb-0a1fd999a1c7a8d68",
            "subnet_id": "subnet-0930bac2fb285b910"
          },
          "dependencies": [
            "aws_internet_gateway.ttest_gw",
            "aws_route_table.ttest_rt_public",
            "aws_subnet.ttest_pubsubnet_1a",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ttest_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f863d9166793c374",
            "route_table_id": "rtb-0a1fd999a1c7a8d68",
            "subnet_id": "subnet-02183bf7840a0e699"
          },
          "dependencies": [
            "aws_internet_gateway.ttest_gw",
            "aws_route_table.ttest_rt_public",
            "aws_subnet.ttest_pubsubnet_1b",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ttest_rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47a15dfc561c5bd",
            "route_table_id": "rtb-0c3dcc02ae5a8f41e",
            "subnet_id": "subnet-0222d4034348e6772"
          },
          "dependencies": [
            "aws_eip.ttest_eip",
            "aws_internet_gateway.ttest_gw",
            "aws_nat_gateway.ttest_nat_for_private_subnet",
            "aws_route_table.ttest_rt_private",
            "aws_subnet.ttest_privsubnet_2b",
            "aws_subnet.ttest_pubsubnet_1a",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ttest_sg_for_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:security-group/sg-0385f814b87db35a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0385f814b87db35a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http request from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdd459a7205926d3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ttest-sg_for_ec2",
            "name_prefix": "",
            "owner_id": "192648581687",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ttest_sg_for_elb",
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ttest_sg_for_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:security-group/sg-0fdd459a7205926d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdd459a7205926d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ttest-sg_for_elb",
            "name_prefix": "",
            "owner_id": "192648581687",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ttest_privsubnet_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:subnet/subnet-0222d4034348e6772",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0222d4034348e6772",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192648581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "dependencies": [
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ttest_pubsubnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:subnet/subnet-0930bac2fb285b910",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0930bac2fb285b910",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192648581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "dependencies": [
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ttest_pubsubnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:subnet/subnet-02183bf7840a0e699",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02183bf7840a0e699",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192648581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0373183ceb1b47e7b"
          },
          "dependencies": [
            "aws_vpc.ttest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ttest_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192648581687:vpc/vpc-0373183ceb1b47e7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-023b67e47c5084214",
            "default_route_table_id": "rtb-01f81b31cd870c10d",
            "default_security_group_id": "sg-010a8441a33bc9c96",
            "dhcp_options_id": "dopt-02f7b52022d2151ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0373183ceb1b47e7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f81b31cd870c10d",
            "owner_id": "192648581687",
            "tags": {
              "Name": "ttest-vpc"
            },
            "tags_all": {
              "Name": "ttest-vpc"
            }
          }
        }
      ]
    }
  ]
}